--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Ustawienie Docker Buildx
         uses: docker/setup-buildx-action@v1
-
+        
       - name: Build and push x86_64 image
         uses: docker/build-push-action@v2
         with:
@@ -24,6 +24,8 @@ jobs:
           file: Dockerfile
           push: true
           platforms: linux/amd64
+          tags: ghcr.io/zadanie2/zadanie2:latest
+
 
       - name: Build and push arm64 image
         uses: docker/build-push-action@v2
